[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/game_scene/static_component/OverlayGameMenu/GameMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/navigation_scene/BackToMenuButton/ReturnToMainMenuBtn.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Font/Nerko_One/NerkoOne-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 3
outline_color = Color( 0.737255, 0.541176, 0.541176, 1 )
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 8
extra_spacing_space = 2
font_data = SubResource( 1 )

[node name="Root" type="Camera2D"]
z_index = 20
current = true
script = ExtResource( 1 )

[node name="MaskLayer" type="Node2D" parent="."]
visible = false
z_index = 1

[node name="NightGawl" type="Panel" parent="MaskLayer"]
modulate = Color( 0.266667, 0.176471, 0.219608, 0.396078 )
margin_left = -691.0
margin_top = -410.0
margin_right = 688.0
margin_bottom = 357.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuOnEndGame" type="Node2D" parent="."]
visible = false
z_index = 3

[node name="PopupMenu" type="Panel" parent="MenuOnEndGame"]
margin_left = -143.119
margin_top = -178.022
margin_right = 151.881
margin_bottom = 65.9782
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MenuOnEndGame/PopupMenu"]
margin_left = 102.783
margin_top = 33.371
margin_right = 183.783
margin_bottom = 47.371
text = "Game Ended"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnToMainMenuBtn" parent="MenuOnEndGame/PopupMenu" instance=ExtResource( 2 )]
margin_left = 25.4278
margin_top = 159.616
margin_right = 271.427
margin_bottom = 199.616

[node name="ScoreDisplayer" type="Label" parent="MenuOnEndGame/PopupMenu"]
margin_left = -100.57
margin_top = 54.4729
margin_right = 385.43
margin_bottom = 138.473
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGameLayer" type="Node2D" parent="."]

[node name="ReturnToMainMenuBtn" parent="InGameLayer" instance=ExtResource( 2 )]
margin_left = 263.721
margin_top = 256.727
margin_right = 509.721
margin_bottom = 296.727

[node name="ScoreDisplayer" type="Label" parent="InGameLayer"]
margin_left = -493.0
margin_top = -309.0
margin_right = -96.0
margin_bottom = -225.0
custom_fonts/font = SubResource( 2 )
text = "0/0"
__meta__ = {
"_edit_use_anchors_": false
}
